--- a/html/AndroidUsers.html
+++ b/html/AndroidUsers.html
@@ -173,7 +173,7 @@
                         <li>Useful Tips</li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="ExpandedNowPlayingArea.html" title="Expanded Now Playing Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="iOSUsers.html" title="iOS Users" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="SongInformationArea.html" title="Song Information Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="iOSUsers.html" title="iOS Users" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -186,7 +186,7 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in your default browser - http://192.168.1.1:9000/Material</span></p>
+<p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in your default browser - </span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Once open do "add to home screen" from the menu</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
