--- a/html/Desktop.html
+++ b/html/Desktop.html
@@ -185,12 +185,11 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts6">Material Desktop / New Music in full screen (</span><a class="rvts11" href="PCUsers.html">app mode</a><span class="rvts6">)</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem13.png"></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Material Desktop / New Music in window (</span><a class="rvts11" href="PCUsers.html">app mode</a><span class="rvts6">)</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">http://lmsipadress:9000/Material/Desktop</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem37.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
