--- a/html/GettingStarted.html
+++ b/html/GettingStarted.html
@@ -185,11 +185,10 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><a class="rvts11" href="Systemrequirements.html"><br/></a></p>
 <p class="rvps2"><a class="rvts11" href="Systemrequirements.html">System Requirements</a></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><a class="rvts11" href="Installation.html">Installation</a></p>
+<p class="rvps2"><a class="rvts11" href="LaunchingMaterial.html">Launching Material</a></p>
+<p class="rvps2"><a class="rvts11" href="PluginSettings.html">Plugin Settings</a></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create Qt Help files</a></p>
 
