--- a/html/Information.html
+++ b/html/Information.html
@@ -13,7 +13,7 @@
 
   <title>Information</title>
   <meta name="description" content="Installation, settings and usage documentation for Material Skin" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="Settings,Donate">
 
 
 
@@ -185,6 +185,13 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6">This displays information about your LMS environment but also gives you access to </span><a class="rvts11" href="ServerSettings.html">Server Settings</a><span class="rvts6">&nbsp;and to Rescan your Library</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem57.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Scroll all the way down.......</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem56.png"></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/help-authoring-tool">Full-featured multi-format Help generator</a></p>
 
