--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -185,17 +185,22 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts6">Material is a fast HTML5 compliant Mobile and Desktop skin for </span><a class="rvts11" href="LogitechMediaServer.html">Logitech Media Server</a><span class="rvts6">&nbsp;7.9.x</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Material Skin is a HTML5 WebApp for Mobile and Desktop devices to be used in conjunction with </span><a class="rvts11" href="LogitechMediaServer.html">Logitech Media Server</a><span class="rvts6">&nbsp;7.9.x</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Material is built and copyright by Craig Drummond (cpd73) using </span><a class="rvts11" href="https://vuetifyjs.com/en/" target="_blank">Vuetify</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Documentation by Jim Gooch (d6jg) using </span><a class="rvts11" href="https://www.helpndoc.com/" target="_blank">HelpNDoc</a></p>
+<p class="rvps2"><span class="rvts6">Documentation by </span><span class="rvts6">Jim Gooch</span><span class="rvts6">&nbsp;(d6jg) using </span><a class="rvts11" href="https://www.helpndoc.com/" target="_blank">HelpNDoc</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">01/11/2019 15:01</span><span class="rvts6">&nbsp;- based upon Material 1.1.1</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Notes</span></p>
-<p class="rvps2"><span class="rvts6">This documentation will frequently refer to http://192.168.1.1:9000/Material - substitute your LMS IP address and Port accordingly</span></p>
+<p class="rvps2"><span class="rvts6">This documentation will frequently refer to </span><span class="rvts6">http://lmsipaddress:9000/Material</span><span class="rvts6">&nbsp;- substitute your LMS IP address and Port accordingly</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
