--- a/html/MaterialSettings.html
+++ b/html/MaterialSettings.html
@@ -185,8 +185,16 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem43.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps2"><span class="rvts6">Return to Home Screen</span></li>
+<li value="2" class="rvps2"><span class="rvts6">Saves your current settings to the LMS server as default settings for use with all devices on first run.</span></li>
+</ol>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16">Important Note</span><span class="rvts6">.</span></p>
-<p class="rvps2"><span class="rvts6">All Material settings are browser / device specific however see under Default Settings</span></p>
+<p class="rvps2"><span class="rvts6">All Material settings are browser / device specific and are stored locally on your device</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem20.png"></p>
@@ -194,37 +202,36 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><span class="rvts6">Toggles display between Dark &amp; Light modes</span></li>
-<li value="2" class="rvps2"><span class="rvts6">Toggles between Desktop, Mobile &amp; Automatic modes - Automatic will display either Desktop or Mobile depending upon Browser window size.</span></li>
-<li value="3" class="rvps2"><span class="rvts6">Toggles Larger fonts on or off</span></li>
-<li value="4" class="rvps2"><span class="rvts6">Stop Button - if you listen to Internet Radio you will know that Pausing a stream is not the same as stopping it.</span></li>
+<li value="2" class="rvps2"><span class="rvts6">Toggles between </span><a class="rvts11" href="Desktop.html">Desktop</a><span class="rvts6">, </span><a class="rvts11" href="Mobile.html">Mobile</a><span class="rvts6">&nbsp;&amp; Automatic modes - Automatic will display either </span><a class="rvts11" href="Desktop.html">Desktop</a><span class="rvts6">&nbsp;or </span><a class="rvts11" href="Mobile.html">Mobile</a><span class="rvts6">&nbsp;depending upon browser window size.</span></li>
+<li value="3" class="rvps2"><span class="rvts6">Toggles larger fonts on or off - very useful on a small screen mobile device</span></li>
+<li value="4" class="rvps2"><span class="rvts6">Stop button</span><br/><span class="rvts6">If you listen to live Internet Radio you will know that pausing a stream is not the same as stopping it.</span><br/><span class="rvts6">Enabling this provides a Stop button next to Play / Pause that will stop a live stream. When you hit Play again the stream rebuffers to its real time position.</span><br/><span class="rvts16">Desktop</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem49.png"><br/><span class="rvts16">Mobile</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem48.png"></li>
 <li value="5" class="rvps2"><span class="rvts6">Determines the level of volume change when you move the volume slider.</span></li>
-<li value="6" class="rvps2"><span class="rvts6">See below</span></li>
-<li value="7" class="rvps2"><span class="rvts6">Example needed</span></li>
+<li value="6" class="rvps2"><span class="rvts6">Keyboard shortcuts</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem24.png"></li>
 </ol>
+<p class="rvps5"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span></p>
+<p class="rvps5"><span class="rvts6">Enabled / Disabled</span></p>
+<p class="rvps5"><img alt="" style="padding : 1px;" src="lib/NewItem22.png"><span class="rvts6">&nbsp;</span><img alt="" style="padding : 1px;" src="lib/NewItem23.png"></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="7" class="rvps2"><span class="rvts6">Toggles display of icons on </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><br/><span class="rvts6">Enabled / Disabled</span></li>
+</ol>
+<p class="rvps5"><img alt="" style="padding : 1px;" src="lib/NewItem41.png"><img alt="" style="padding : 1px;" src="lib/NewItem42.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16">Keyboard shortcuts </span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem24.png"></p>
-<p class="rvps2"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Enabled / Disabled</span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem22.png"><span class="rvts6">&nbsp;</span><img alt="" style="padding : 1px;" src="lib/NewItem23.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem26.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><span class="rvts6">Self explanatory</span></li>
-<li value="2" class="rvps2"><span class="rvts6">Example needed</span></li>
-<li value="3" class="rvps2"><span class="rvts6">Favourites can be placed in folders and sorted however you like on the server side. This suppresses that behaviour and substitutes an alphabetical listing with Folders at the top.</span></li>
-<li value="4" class="rvps2"><span class="rvts6">Renders an Artist picture if available or an Album cover as a background to the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area and </span><a class="rvts11" href="ExpandedNowPlayingArea.html">Expanded Now Playing</a><span class="rvts6">&nbsp;areas</span></li>
-<li value="5" class="rvps2"><span class="rvts6">iOS only. Items on the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">&nbsp;can be sorted by drag-and-drop except on iOS.</span></li>
+<li value="2" class="rvps2"><span class="rvts6">Toggles whether </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;is shown from click on audio item</span><br/><span class="rvts6">If enabled this will bring up the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;when you click anywhere on an audio item.</span></li>
+<li value="3" class="rvps2"><span class="rvts6">Favourites can be placed in folders and sorted however you like on the server side. This suppresses that behaviour and substitutes an alphabetical listing with folders at the top.</span></li>
+<li value="4" class="rvps2"><span class="rvts6">Renders an artist picture if available or an album cover as a background to the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area and </span><a class="rvts11" href="ExpandedNowPlayingArea.html">Expanded Now Playing</a><span class="rvts6">&nbsp;areas</span></li>
+<li value="5" class="rvps2"><span class="rvts6">iPhone only. Items on the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">&nbsp;can be sorted by drag-and-drop except on iPhone. </span><br/><span class="rvts6">Selecting this option in Material running on an iPhone will automatically sort home screen items for you.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem27.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps2"><span class="rvts6">Determines which standard LMS items are displayed on the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">. These can subsequently be re-ordered via drag-and-drop.</span></li>
+<li value="1" class="rvps2"><span class="rvts6">Determines which standard LMS items are displayed on the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">. </span><br/><span class="rvts6">These can subsequently be re-ordered via drag-and-drop except where Material is running on an iPhone.</span><br/><span class="rvts6">See also </span><a class="rvts11" href="Pinning.html">Pinning</a></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem34.png"></p>
@@ -237,6 +244,17 @@
 <li value="4" class="rvps2"><span class="rvts6">Only usable on mobile devices or touch screen PCs.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem44.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps2"><span class="rvts6">Toggles auto-scroll to current track</span><br/><span class="rvts6">If enabled this will scroll your play queue automatically to the current track when the track changes</span><br/><span class="rvts6">The current track is highlighted</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem45.png"><br/><span class="rvts6"><br/></span></li>
+<li value="2" class="rvps2"><span class="rvts6">Toggles whether </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;is shown from click on audio item</span><br/><span class="rvts6">If enabled this will bring up the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;when you click anywhere on an audio item rather than requiring you to use the three vertical dot access</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem46.png"><br/><span class="rvts6"><br/></span></li>
+<li value="3" class="rvps2"><span class="rvts6">Toggles background covert art</span><br/><span class="rvts6">If enabled cover art of the currently playing track will be displayed as background art in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area</span></li>
+<li value="4" class="rvps2"><span class="rvts6">Toggles display of track number</span><br/><span class="rvts6">If enabled will attempt to show the track number in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area. </span><br/><span class="rvts6">Note. Music streamed from online sources such as Spotify do not have track numbers so having this switched On is a good indicator of whether DSTM is playing local or streamed music.</span></li>
+<li value="5" class="rvps2"><span class="rvts6">Toggles display of three lines per item in </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area</span></li>
+<li value="6" class="rvps2"><span class="rvts6">Toggles display of cover art of currently playing track as background to </span><a class="rvts11" href="SongInformationArea.html">Song Information</a><br/><span class="rvts6">Note. Only visible if </span><a class="rvts11" href="MusicArtistInformation.html">Music &amp; Artist Information</a><span class="rvts6">&nbsp;plugin is installed.</span></li>
+</ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p></p>
