--- a/html/Mobile.html
+++ b/html/Mobile.html
@@ -185,9 +185,12 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Material operating in Mobile full screen app mode - </span><a class="rvts11" href="AndroidUsers.html">Android</a><span class="rvts6">&nbsp;/ </span><a class="rvts11" href="iOSUsers.html">iOS</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">In this example New Music has been </span><a class="rvts11" href="Pinning.html">pinned</a><span class="rvts6">&nbsp;to the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem28.png"></p>
 <p></p>
