--- a/html/OpenMiniPlayer.html
+++ b/html/OpenMiniPlayer.html
@@ -13,7 +13,7 @@
 
   <title>Open Mini Player</title>
   <meta name="description" content="Installation, settings and usage documentation for Material Skin" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="Settings">
 
 
 
