--- a/html/PCUsers.html
+++ b/html/PCUsers.html
@@ -199,11 +199,11 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">In the location box type</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="http://192.168.1.1:9000/Material"</span></p>
+<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="</span><span class="rvts6">http://lmsipaddress:9000/Material</span><span class="rvts6">"</span></p>
 <p class="rvps2"><span class="rvts6">or</span></p>
-<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="http://192.168.1.1:9000/Material/desktop"</span></p>
+<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="</span><span class="rvts6">http://lmsipadress:9000/Material/Desktop</span><span class="rvts6">"</span></p>
 <p class="rvps2"><span class="rvts6">or</span></p>
-<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="http://192.168.1.1:9000/Material/mobile"</span></p>
+<p class="rvps2"><span class="rvts6">"C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" --app="</span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span><span class="rvts6">"</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Amend the IP address and port number according to your setup.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
