--- a/html/Pinning.html
+++ b/html/Pinning.html
@@ -173,7 +173,7 @@
                         <li><a href="UsingMaterial.html">Using Material</a></li><li><a href="HomeScreen.html">Home Screen</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Menu.html" title="Menu" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="HomeScreen.html" title="Home Screen" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="BrowseArea.html" title="Browse Area" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
