--- a/html/QueueArea.html
+++ b/html/QueueArea.html
@@ -198,12 +198,10 @@
 <li value="6" class="rvps2"><span class="rvts6">Save Playlist</span></li>
 <li value="7" class="rvps2"><span class="rvts6">Clear Playlist</span></li>
 <li value="8" class="rvps2"><span class="rvts6">Current Track</span></li>
-<li value="9" class="rvps2"><span class="rvts6">Additional Options - see below</span></li>
+<li value="9" class="rvps2"><a class="rvts11" href="ContextMenu.html">Context Menu</a></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16">Additional Options (Mobile &amp; Desktop)</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem33.png"></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Generate Kindle eBooks with ease</a></p>
 
