--- a/html/Settings1.html
+++ b/html/Settings1.html
@@ -13,7 +13,7 @@
 
   <title>Settings</title>
   <meta name="description" content="Installation, settings and usage documentation for Material Skin" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="Settings">
 
 
 
@@ -186,7 +186,7 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Settings are accessed from the three vertical dots at top right of Material in both Desktop and Mobile modes.</span></p>
+<p class="rvps2"><span class="rvts6">Settings are accessed from the three vertical dots - the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;- at top right of Material in both Desktop and Mobile modes.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem2.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
