--- a/html/context/23.html
+++ b/html/context/23.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Menu"</title>
-    <link rel="canonical" href="../Menu.html" />
+    <title>Redirecting to "Browse Area"</title>
+    <link rel="canonical" href="../BrowseArea.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Menu.html" />
+    <meta http-equiv="refresh" content="0; url=../BrowseArea.html" />
 </head>
 
 </html>
