--- a/html/context/29.html
+++ b/html/context/29.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Now Playing Area"</title>
-    <link rel="canonical" href="../NowPlayingArea.html" />
+    <title>Redirecting to "Song Information Area"</title>
+    <link rel="canonical" href="../SongInformationArea.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../NowPlayingArea.html" />
+    <meta http-equiv="refresh" content="0; url=../SongInformationArea.html" />
 </head>
 
 </html>
