--- a/html/iOSUsers.html
+++ b/html/iOSUsers.html
@@ -185,7 +185,7 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in Safari browser - http://192.168.1.1:9000/Material</span></p>
+<p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in Safari browser - </span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Then click on the Share icon</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
