--- a/html/ExpandedNowPlayingArea.html
+++ b/html/ExpandedNowPlayingArea.html
@@ -173,7 +173,7 @@
                         <li><a href="UsingMaterial.html">Using Material</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="UsingMaterial.html" title="Using Material" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="NowPlayingArea.html" title="Now Playing Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="AndroidUsers.html" title="Android Users" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="UsingMaterial.html" title="Using Material" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="NowPlayingArea.html" title="Now Playing Area" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="MusicArtistInformation.html" title="Music &amp; Artist Information" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
