--- a/html/HomeScreen.html
+++ b/html/HomeScreen.html
@@ -186,22 +186,30 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16">Mobile Home Screen</span></p>
+<p class="rvps2"><span class="rvts16">Mobile</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem29.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps2"><span class="rvts6">Player Switch and now playing display</span></li>
+<li value="1" class="rvps2"><a class="rvts11" href="PlayerSelection.html">Player Selection</a><span class="rvts6">&nbsp;and now playing display</span></li>
 <li value="2" class="rvps2"><span class="rvts6">Volume Control</span></li>
 <li value="3" class="rvps2"><span class="rvts6">Play / Pause</span></li>
 <li value="4" class="rvps2"><a class="rvts11" href="Settings1.html">Settings</a></li>
-<li value="5" class="rvps2"><span class="rvts6">Browse (current view)</span></li>
+<li value="5" class="rvps2"><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area - current view</span></li>
 <li value="6" class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Playing</a></li>
 <li value="7" class="rvps2"><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts16">Desktop</span></p>
+<p class="rvps2"><span class="rvts16"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem61.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps2"><span class="rvts6">Top menu - </span><a class="rvts11" href="PlayerSelection.html">Player Selection</a><span class="rvts6">&nbsp;/ Volume / </span><a class="rvts11" href="SongInformationArea.html">Info</a><span class="rvts6">&nbsp;/ </span><a class="rvts11" href="ExpandedNowPlayingArea.html">Expanded Now Playing</a><span class="rvts6">&nbsp;/ </span><a class="rvts11" href="Settings1.html">Settings</a><br/><a class="rvts11" href="SongInformationArea.html">Info</a><span class="rvts6">&nbsp;is only visible if </span><span class="rvts6">Music &amp; Artist Information plugin (MAI)</span><span class="rvts6">&nbsp;is installed</span></li>
+<li value="2" class="rvps2"><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area</span></li>
+<li value="3" class="rvps2"><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;are</span></li>
+<li value="4" class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;area</span></li>
+</ol>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/create-help-files-for-the-qt-help-framework">Create help files for the Qt Help Framework</a></p>
 
