--- a/html/NowPlayingArea.html
+++ b/html/NowPlayingArea.html
@@ -186,6 +186,7 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts16">Mobile</span></p>
+<p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem30.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><a name="BitRate"></a>
@@ -197,9 +198,9 @@
 <li value="1" class="rvps2"><span class="rvts6">Track elapsed time.</span></li>
 <li value="2" class="rvps2"><span class="rvts6">Track duration.</span></li>
 <li value="3" class="rvps2"><span class="rvts6">This indicates that Don't Stop The Music is enabled for this player. If disabled it is replaced with a Repeat icon.</span></li>
-<li value="4" class="rvps2"><span class="rvts6">Play Previous track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
-<li value="5" class="rvps2"><span class="rvts6">Play/Pause</span></li>
-<li value="6" class="rvps2"><span class="rvts6">Play Next track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
+<li value="4" class="rvps2"><span class="rvts6">Play previous track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
+<li value="5" class="rvps2"><span class="rvts6">Play / Pause</span></li>
+<li value="6" class="rvps2"><span class="rvts6">Play next track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
 <li value="7" class="rvps2"><span class="rvts6">Shuffle on (blue) /off (grey) - shown in off (grey) state. </span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -208,10 +209,10 @@
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem39.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps2"><span class="rvts6">Play Previous track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
+<li value="1" class="rvps2"><span class="rvts6">Play previous track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
 <li value="2" class="rvps2"><span class="rvts6">Play / Pause</span></li>
-<li value="3" class="rvps2"><span class="rvts6">Play Next track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
-<li value="4" class="rvps2"><span class="rvts6">Track playing</span></li>
+<li value="3" class="rvps2"><span class="rvts6">Play next track in </span><a class="rvts11" href="QueueArea.html">Queue</a></li>
+<li value="4" class="rvps2"><span class="rvts6">Track playing - normally Track, Artist * Album but can be configured to display Composer and/or Conductor via </span><a class="rvts11" href="PluginSettings.html#ComposerGenre">Plugin Settings</a></li>
 <li value="5" class="rvps2"><span class="rvts6">Track attribute display can be enabled / disabled via </span><a class="rvts11" href="MaterialSettings.html#TrackAttributeSettings">Material Settings</a></li>
 <li value="6" class="rvps2"><span class="rvts6">Drag slider to jump back / forward in track</span></li>
 </ol>
