--- a/html/context/30.html
+++ b/html/context/30.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Expanded Now Playing Area"</title>
-    <link rel="canonical" href="../ExpandedNowPlayingArea.html" />
+    <title>Redirecting to "Context Menu"</title>
+    <link rel="canonical" href="../ContextMenu.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../ExpandedNowPlayingArea.html" />
+    <meta http-equiv="refresh" content="0; url=../ContextMenu.html" />
 </head>
 
 </html>
